--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -50,6 +50,36 @@ logo ALFA - TR Arabia
 
 body {
 	overflow-x: hidden;
+	#toTop {
+		display: block;
+		position: fixed;
+		bottom: 30px;
+		right: 20px;
+		z-index: 99;
+		border: none;
+		outline: none;
+		background-color: #fff;
+		color: $czarny;
+		cursor: pointer;
+		border-radius: 4px;
+		opacity: 0.2;
+		transition: none;
+		font-size: 0px;
+		padding: 0px;
+		width: 0px;
+		height: 0px;
+		&.show {
+			opacity: 0.75;
+			width: auto;
+			height: auto;
+			font-size: 40px;
+			padding: 5px;
+			transition: all 1s;
+			&:hover {
+				opacity: 1;
+			}
+		}
+	}
 	header {
 		width: 100%;
 		height: 100vh;
