--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -48,6 +48,16 @@ logo ALFA - TR Arabia
 	background: $czarny;
 }
 
+@font-face {
+	font-family: 'Arabia';
+	src: url('../fonts/TRArabia.ttf') format('truetype');
+}
+
+@font-face {
+	font-family: 'Scriptina';
+	src: url('../fonts/ScriptinaPro.otf') format('opentype');
+}
+
 body {
 	overflow-x: hidden;
 	#toTop {
@@ -77,12 +87,13 @@ body {
 			transition: all 1s;
 			&:hover {
 				opacity: 1;
+				transition: all 0.3s;
 			}
 		}
 	}
 	header {
 		width: 100%;
-		height: 100vh;
+		min-height: 100vh;
 		background-image: url('../img/bg.jpg');
 		background-repeat: no-repeat;
 		background-position: 50% 50%;
@@ -156,6 +167,54 @@ body {
 						}
 					}
 				}
+			}
+		}
+		.navbar-fixed {
+			height: 1px;
+		}
+		.header-text {
+			width: 100%;
+			height: calc(100vh - 1px);
+			min-height: 768px;
+			position: relative;
+			h1 {
+				color: #fff;
+				text-transform: uppercase;
+				font-weight: 900;
+				font-size: 3.2em;
+				padding: 0px;
+				margin: 0px;
+				position: absolute;
+				top: 40%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				text-shadow: 2px 2px 8px $czarny;
+			}
+			h2:nth-of-type(1) {
+				font-family: 'Scriptina';
+				color: #222;
+				font-size: 4.5em;
+				line-height: 1.2em;
+				padding: 0px;
+				margin: 0px;
+				position: absolute;
+				top: 48%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				text-shadow: 0px 0px 1px #222;
+			}
+			h2:nth-of-type(2) {
+				font-family: 'Scriptina';
+				color: #222;
+				font-size: 4.5em;
+				line-height: 1.2em;
+				padding: 0px;
+				margin: 0px;
+				position: absolute;
+				top: 58%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				text-shadow: 0px 0px 1px #222;
 			}
 		}
 	}
