--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,19 +1,17 @@
 /* tmp */
 
-$s-min: 20;
-$s-max: 70;
-$l-min: 30;
-$l-max: 90;
-@for $i from 1 through 5 {
-	section:nth-child(#{$i}) {
-		background-color: hsl(random(360), $s-min+random($s-max+-$s-min), $l-min+random($l-max+-$l-min));
-	}
-}
-
-section {
-	min-height: 30vh;
-}
-
+// $s-min: 20;
+// $s-max: 70;
+// $l-min: 30;
+// $l-max: 90;
+// @for $i from 1 through 5 {
+// 	section:nth-child(#{$i}) {
+// 		background-color: hsl(random(360), $s-min+random($s-max+-$s-min), $l-min+random($l-max+-$l-min));
+// 	}
+// }
+// section {
+// 	min-height: 30vh;
+// }
 /* Normalize.css fix */
 
 * {
@@ -303,7 +301,7 @@ body {
 				text-align: center;
 				.icon {
 					margin: 20px 0px;
-					&:hover{
+					&:hover {
 						div:nth-child(1) {
 							img {
 								filter: contrast(120%);
@@ -342,7 +340,7 @@ body {
 				text-shadow: 0px 0px 1px #fff;
 			}
 			ul {
-				li{
+				li {
 					list-style-type: circle;
 					list-style-position: inside;
 				}
@@ -359,6 +357,23 @@ body {
 				&:nth-child(2) {
 					background-image: url('../img/bg-oferta2.jpg');
 				}
+			}
+		}
+		#zapraszamy {
+			padding: 40px;
+			margin: 0px;
+			p {
+				font-size: 1.2em;
+				font-weight: 300;
+			}
+		}
+		.button{
+			display: inline-block;
+			background-color: $zloty;
+			color: $czarny;
+			padding: 10px 20px;
+			&:hover{
+				filter: contrast(120%);
 			}
 		}
 	}
