--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -442,5 +442,15 @@ body {
 				}
 			}
 		}
+		#galeria {
+			padding: 50px 0px;
+			background: #fff;
+			h1 {
+				text-align: center;
+				font-family: 'Scriptina';
+				font-size: 3em;
+				text-shadow: 0px 0px 0px #000;
+			}
+		}
 	}
 }
