--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -123,6 +123,7 @@ body {
 		outline: none;
 		background-color: #fff;
 		color: $czarny;
+		text-shadow: 0px 0px 0px $czarny;
 		cursor: pointer;
 		border-radius: 4px;
 		opacity: 0.2;
@@ -132,13 +133,15 @@ body {
 		width: 0px;
 		height: 0px;
 		&.show {
-			opacity: 0.6;
+			opacity: 0.7;
 			width: auto;
 			height: auto;
 			font-size: 40px;
-			padding: 5px;
+			padding: 0px;
 			transition: all 1s;
 			&:hover {
+				color: $zloty;
+				text-shadow: 0px 0px 0px $zloty;
 				opacity: 1;
 				transition: all 0.3s;
 			}
@@ -428,7 +431,7 @@ body {
 				&>li {
 					border-bottom: 1px solid rgba(#fff, 0.8);
 					box-shadow: unset;
-					&:last-child{
+					&:last-child {
 						border: none;
 					}
 					&.active {
@@ -451,10 +454,49 @@ body {
 				font-size: 3em;
 				text-shadow: 0px 0px 0px #000;
 			}
-			.gallery{
+			.arrows{
+				position: relative;
+				.arrow {
+					display: inline-block;
+					width: 50px;
+					height: 50px;
+					position: absolute;
+					top: calc(50% - 25px);
+					z-index: 2;
+					cursor: pointer;
+					opacity: 0.5;
+					-moz-transition: all 500ms;
+					-webkit-transition: all 500ms;
+					transition: all 500ms;
+					background-color: #fff;
+					opacity: 0.7;
+					color: $czarny;
+					&.arrowLeft{
+						left: 0px;
+						border-radius: 0px 4px 4px 0px;
+					}
+					&.arrowRight{
+						right: 0px;
+						border-radius: 4px 0px 0px 4px;
+					}
+					&:hover{
+						opacity: 1;
+						color: $zloty;
+					}
+					i{
+						display: inline-block;
+						width: 40px;
+						height: 40px;
+						margin: 5px;
+						font-size: 40px;
+						line-height: 40px;
+					}
+				}
+			}
+			.gallery {
 				line-height: 0px;
 				text-align: center;
-				a{
+				a {
 					display: inline-block;
 					width: 33.3%;
 					height: 250px;
@@ -463,8 +505,20 @@ body {
 					background-size: cover;
 					background-repeat: no-repeat;
 					background-position: center center;
-					&:hover{
-						filter: sepia(120%);
+					transition: all 0.25s;
+					position: relative;
+					&:hover {
+						cursor: zoom-in;
+						&::before {
+							content: "";
+							display: block;
+							position: absolute;
+							top: 0px;
+							left: 0px;
+							width: 100%;
+							height: 100%;
+							background: rgba(#fff, 0.4);
+						}
 					}
 				}
 			}
