--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -137,7 +137,7 @@ body {
 			width: auto;
 			height: auto;
 			font-size: 40px;
-			padding: 0px;
+			padding: 5px;
 			transition: all 1s;
 			&:hover {
 				color: $zloty;
@@ -467,7 +467,7 @@ body {
 					opacity: 0.5;
 					-moz-transition: all 500ms;
 					-webkit-transition: all 500ms;
-					transition: all 500ms;
+					transition: all 0.5s;
 					background-color: #fff;
 					opacity: 0.7;
 					color: $czarny;
@@ -505,18 +505,21 @@ body {
 					background-size: cover;
 					background-repeat: no-repeat;
 					background-position: center center;
-					transition: all 0.25s;
 					position: relative;
+					&::before {
+						content: "";
+						display: block;
+						position: absolute;
+						top: 0px;
+						left: 0px;
+						width: 100%;
+						height: 100%;
+						background: rgba(#fff, 0);
+						transition: all 0.5s;
+					}
 					&:hover {
 						cursor: zoom-in;
 						&::before {
-							content: "";
-							display: block;
-							position: absolute;
-							top: 0px;
-							left: 0px;
-							width: 100%;
-							height: 100%;
 							background: rgba(#fff, 0.4);
 						}
 					}
