--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -518,7 +518,7 @@ body {
 						transition: all 0.5s;
 					}
 					&:hover {
-						cursor: zoom-in;
+						cursor: pointer;
 						&::before {
 							background: rgba(#fff, 0.4);
 						}
@@ -590,6 +590,41 @@ body {
 				input[type="submit"]{
 					border:none;
 				}
+			}
+		}
+	}
+	footer{
+		width: 100%;
+		min-height: 200px;
+		background: $czarny;
+		color: $zloty;
+		padding: 30px 0px;
+		font-size: 13px;
+		a{
+			color: $zloty;
+		}
+		.row{
+			margin: 0px;
+		}
+		.copyright{
+			.company-name{
+				display: inline-block;
+				margin-left: 10px;
+				font-family: 'Arabia';
+				font-size: 16px;
+			}
+		}
+		.polecaja{
+			text-align: right;
+			.company-name{
+				display: inline-block;
+				margin-left: 10px;
+				font-family: 'Arabia';
+				font-size: 24px;
+			}
+			img{
+				height: 60px;
+				margin-bottom: -10px;
 			}
 		}
 	}
