google maps fixes

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -594,6 +594,10 @@ body {
 				margin: 0px;
 				#google-maps {
 					height: 300px;
+					a{
+						color: $czarny;
+						text-decoration: underline;
+					}
 				}
 			}
 			.map-control {
